--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/nhcarrigan/new-contact-form.git"
   },
-  "author": "Nicholas Carrigan",
+  "author": "Naomi Carrigan",
   "license": "Hippocratic-2.1",
   "bugs": {
     "url": "https://github.com/nhcarrigan/new-contact-form/issues"
